fix: correct image loading spinner alignment

--- a/src/preview/preview-canvas/preview-canvas.css
+++ b/src/preview/preview-canvas/preview-canvas.css
@@ -1,4 +1,5 @@
 .amp-preview-canvas {
+  width: 100%;
   height: 458px;
   display: flex;
   justify-content: left;
@@ -15,7 +16,6 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  position: relative;
 }
 
 .amp-preview-canvas__image {
